--- a/android-iconify-fontawesome/build.gradle
+++ b/android-iconify-fontawesome/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION
-    buildToolsVersion BUILD_TOOLS_VERSION
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
