--- a/shared.yaml
+++ b/shared.yaml
@@ -1,7 +1,7 @@
  
-PLATFORM_NAME: 'Unani_Centros'
-PLATFORM_DESTINATION_NAME: 'ovaleriano@nasolutions.mxs'
+PLATFORM_NAME: 'Unani_Centro'
+PLATFORM_DESTINATION_NAME: 'ovaleriano@nasolutions.mx'
 OAUTH_CLIENT_ID: 'c68414712d99f0bed0d5'
 API_HOST_URL: 'https://edxunani.demasys.net' # localhost is 10.0.2.2 in Android
-FEEDBACK_EMAIL_ADDRESS: 'ovaleriano@nasolutions.mxs'
-ENVIRONMENT_DISPLAY_NAME: 'unani'
+FEEDBACK_EMAIL_ADDRESS: 'ovaleriano@nasolutions.mx'
+ENVIRONMENT_DISPLAY_NAME: 'Unani_Centro'
